Fixes sidenote on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -198,7 +198,7 @@ body {
 .sidenote-number:after { content: counter(sidenote-counter);
   font-size: 0.8rem;
   top: -0.3rem;
-  left: 0.1rem;}
+  left: 0rem;}
 
 .sidenote:before { 
   content: counter(sidenote-counter) " ";
@@ -224,13 +224,14 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
   .margin-toggle:checked + .sidenote,
   .margin-toggle:checked + .marginnote { 
     display: block;
-    float: left;
-    left: 1rem;
-    clear: both;
-    width: 95%;
-    margin: 1rem 2.5%;
-    vertical-align: baseline;
-    position: relative; 
+    background: #f2f2f2;
+    margin: 0;
+    padding: 1rem;
+    margin: 1rem 0;
+    width: 100%;
+    border-bottom: 1px solid gray;
+    border-top: 1px solid gray;
+    position: initial; 
   }
   label { cursor: pointer; }
 }
